# 580FinalProj

./: CMakeLists.txt  ObjLoader.cpp  ObjLoader.h  README.md  main.cpp
dataStructure/: BSP.cpp  BSP.h  CMakeLists.txt  KdTree.cpp  KdTree.h
lib/catch2/: CMakeLists.txt
lib/lodepng-master/: CMakeLists.txt  lodepng.cpp
lib/tgaimage/: CMakeLists.txt
linear/: CMakeLists.txt  Mat.h  Vec.h
renderer/: CMakeLists.txt  Mesh.cpp  Mesh.h  RayCast.cpp  RayCast.h  Renderer.cpp  Renderer.h  Tri.cpp  Tri.h  renderer.cpp  renderer.h
test/: CMakeLists.txt  Test_KdTree.cpp  Test_RayCast.cpp
tgaimage/: tgaimage.cpp
util/: CMakeLists.txt  util.cpp  util.h
